# wautofocuser

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.cu  wautofocuser.vpj
cython/: CMakeLists.txt  wautofocuser.pyx
cython/cpp_lib/: CMakeLists.txt  GilStateScopeOperators.cpp  GilStateScopeOperators.h  _Highpass.cu  _Highpass.h  _SpatialFilter.cu  _SpatialFilter.h
training_and_testing/: image_from_multi_image_statistics.py  make_experiment_01_a_dataset.py  make_experiment_01_a_masks.py  make_life_assay_pilot_background_subtraction_comparison.py  make_lipofuscin_fluorescence_background_subtraction_comparison.py  manually_score.py  manually_score.ui  manually_score_experiment01_a_bf_focus_quality.py
